# AFO

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  alembic.ini  config.py  docker-compose.yaml  forms.py  main.py  models.py  pyproject.toml  router.py  schemas.py  services.py  test.py
app/migrations/: env.py
app/migrations/versions/: 2509683cd1da_.py  40fffa5cf14e_feat_init_commit.py  60e8985e4cea_feat_init_commit.py  793affa6acb1_feat_init_new_migrations.py  a0b8980d697b_feat_init_commit.py  a4aa9c96a9fd_.py  c782dc335092_.py  f36762a89867_feat_init_commit.py
app/templates/: add_bank.html  delete_bank.html  index.html  login.html  register.html  update_bank.html
app/templates/views/: authenticated.html  unauthenticated.html
