[tool.poetry]
name = "afo"
version = "0.1.0"
description = ""
authors = ["kohiry <kohiry@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-wtf = "^1.2.1"
email-validator = "^2.0.0.post2"
flask-bcrypt = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
